feat(registrations): support admin manual event registration creation
